<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Who\'s First?</string>
	<string name="homescreen_name">Who\'s First?</string>
    <string name="action_settings">Settings</string>
    <string name="timerValue">#</string>
	<string name="toStartHint">Touch screen with TWO or more fingers to initiate countdown...</string>
  
    <!-- preferences -->
    <string name="prefsCatTitle_General">Developers</string>
    
    <string name="prefs_ShowPlayerOrder_title">Show Player Order</string>
    <string name="prefs_ShowPlayerOrder_summaryOff">First Player only</string>
    <string name="prefs_ShowPlayerOrder_summaryOn">Assign Player Order</string>
    <string name="prefs_ShowPlayerOrder_key">prefs_showPlayerOrder</string>

    <string name="prefs_ShowPlayerOrderAs_title">Display Order As</string>
    <string name="prefs_ShowPlayerOrderAs_summaryOff">Value In Circle</string>
    <string name="prefs_ShowPlayerOrderAs_summaryOn">Border Badge</string>
    <string name="prefs_ShowPlayerOrderAs_key">prefs_showPlayerOrde</string>
    
    <string name="prefs_StartCountdownAt_title">Countdown From</string>
    <string name="prefs_StartCountdownAt_key">prefs_StartCountdownAt</string>
    
    <string name="prefs_ShowSwipeHint_title">Show Gesture Hint</string>
    <string name="prefs_ShowSwipeHint_summaryOff">Hidden</string>
    <string name="prefs_ShowSwipeHint_summaryOn">Visible</string>
    <string name="prefs_ShowSwipeHint_key">prefs_showSwipeHint</string>
    
    <string name="prefsCatTitle_Developers">Developers</string>
    <string name="prefs_ShowDebugOutput_title">Show Debug Output</string>
    <string name="prefs_ShowDebugOutput_summaryOff">No debugging output</string>
    <string name="prefs_ShowDebugOutput_summaryOn">Debugging enabled</string>
    <string name="prefs_ShowDebugOutput_key">prefs_showDebugOutput</string>
    
    <!-- about dialog -->
    <string name="author">Chisel Wright</string>
    <string name="author_twitter">\@chizcw</string>
    
    <!-- credits & attributions -->
    <string name="credits_title">Kudos</string>
    <string name="credit_meeple_title">Meeple</string>
    <string name="credit_meeple_linktext">thenounproject.com</string>
    <string name="credit_meeple_linkurl">http://thenounproject.com/term/meeple/1269/"</string>
    
    <!--
    <li>Meeple - <a href="http://thenounproject.com/term/meeple/1269/">http://thenounproject.com/term/meeple/1269/</a></li>
    <li>Gesturecons - <a href="http://rongeorge.com/blog/gesturcons/">http://rongeorge.com/blog/gesturcons/</a</li>
    -->
        
        
    <!-- android-rate -->
    <string name="rate_dialog_title">Rate Who\'s First?</string>
    <string name="rate_dialog_message">If you find this app useful please take a moment to rate it.\nThanks for your support!</string>
    <string name="rate_dialog_ok">Rate Now</string>
    <string name="rate_dialog_cancel">Maybe Later</string>
    <string name="rate_dialog_no">Never Ask</string>
</resources>
